메인화면 구성 끝

--- a/index.html
+++ b/index.html
@@ -1583,21 +1583,35 @@
       <div class="inner">
         <h3 class="sec-title">SHOP THE LOOK</h3>
         <div class="theme-wrap">
+
           <div class="theme-pic-wrap">
             <dl>
               <dt>A POETIC JOURNEY</dt>
               <dd>여행과 일상을 넘나들며 마주하는 <br>
                 다양한 순간들을 마치 한 편의 시처럼</dd>
             </dl>
-            <ul class="theme-pic-list">
-              <li>
-                <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
-              </li>
-            </ul>
-            <div class="theme-paging">
-              <span>1</span>
-              <span>/</span>
-              <span>6</span>
+            <div class="swiper theme-pic-list">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
             </div>
             <button type="button" class="btn-basic btn-prev">
               <i class="hidden">이전</i>
@@ -1607,78 +1621,80 @@
             </button>
           </div>
           <div class="theme-item-wrap">
-            <ul class="theme-item-list">
-              <li>
-                <a href="#">
-                  <div class="item-pic">
-                    <figure>
-                      <img src="./img/theme-item1.png" alt="JEFFERY BACKPACK">
-                      <img src="./img/theme-item1-1.png" alt="JEFFERY BACKPACK2">
-                    </figure>
-                  </div>
-                  <div class="item-info">
-                    <ul class="color-swatch">
-                      <li class="khaki"><i class="hidden">KHAKI</i></li>
-                      <li class="navy"><i class="hidden">NAVY</i></li>
-                    </ul>
-                    <p class="brand-name">SAMSONITE</p>
-                    <h4 class="item-name">JEFFERY</h4>
-                    <p class="item-detail">BACKPACK M</p>
-                    <div class="price-wrap">
-                      <strong class="price">429,000</strong>
-                      <!-- <span class="sale">582,000</span> -->
+            <div class="swiper theme-item-list">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="item-pic">
+                      <figure>
+                        <img src="./img/theme-item1.png" alt="JEFFERY BACKPACK">
+                        <img src="./img/theme-item1-1.png" alt="JEFFERY BACKPACK2">
+                      </figure>
                     </div>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <div class="item-pic">
-                    <figure>
-                      <img src="./img/theme-item2.png" alt="JEFFERY BRIEFCASE">
-                      <img src="./img/theme-item2-1.png" alt="JEFFERY BRIEFCASE2">
-                    </figure>
-                  </div>
-                  <div class="item-info">
-                    <ul class="color-swatch">
-                      <li class="khaki"><i class="hidden">KHAKI</i></li>
-                      <li class="navy"><i class="hidden">NAVY</i></li>
-                    </ul>
-                    <p class="brand-name">SAMSONITE</p>
-                    <h4 class="item-name">JEFFERY</h4>
-                    <p class="item-detail">BRIEFCASE</p>
-                    <div class="price-wrap">
-                      <strong class="price">359,000</strong>
-                      <!-- <span class="sale">582,000</span> -->
+                    <div class="item-info">
+                      <ul class="color-swatch">
+                        <li class="khaki"><i class="hidden">KHAKI</i></li>
+                        <li class="navy"><i class="hidden">NAVY</i></li>
+                      </ul>
+                      <p class="brand-name">SAMSONITE</p>
+                      <h4 class="item-name">JEFFERY</h4>
+                      <p class="item-detail">BACKPACK M</p>
+                      <div class="price-wrap">
+                        <strong class="price">429,000</strong>
+                        <!-- <span class="sale">582,000</span> -->
+                      </div>
                     </div>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <div class="item-pic">
-                    <figure>
-                      <img src="./img/theme-item3.png" alt="JEFFERY TOTE">
-                      <img src="./img/theme-item3-1.png" alt="JEFFERY TOTE2">
-                    </figure>
-                  </div>
-                  <div class="item-info">
-                    <ul class="color-swatch">
-                      <li class="khaki"><i class="hidden">KHAKI</i></li>
-                      <li class="navy"><i class="hidden">NAVY</i></li>
-                    </ul>
-                    <p class="brand-name">SAMSONITE</p>
-                    <h4 class="item-name">JEFFERY</h4>
-                    <p class="item-detail">TOTE</p>
-                    <div class="price-wrap">
-                      <strong class="price">359,000</strong>
-                      <!-- <span class="sale">582,000</span> -->
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="item-pic">
+                      <figure>
+                        <img src="./img/theme-item2.png" alt="JEFFERY BRIEFCASE">
+                        <img src="./img/theme-item2-1.png" alt="JEFFERY BRIEFCASE2">
+                      </figure>
                     </div>
-                  </div>
-                </a>
-              </li>
-
-            </ul>
+                    <div class="item-info">
+                      <ul class="color-swatch">
+                        <li class="khaki"><i class="hidden">KHAKI</i></li>
+                        <li class="navy"><i class="hidden">NAVY</i></li>
+                      </ul>
+                      <p class="brand-name">SAMSONITE</p>
+                      <h4 class="item-name">JEFFERY</h4>
+                      <p class="item-detail">BRIEFCASE</p>
+                      <div class="price-wrap">
+                        <strong class="price">359,000</strong>
+                        <!-- <span class="sale">582,000</span> -->
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="item-pic">
+                      <figure>
+                        <img src="./img/theme-item3.png" alt="JEFFERY TOTE">
+                        <img src="./img/theme-item3-1.png" alt="JEFFERY TOTE2">
+                      </figure>
+                    </div>
+                    <div class="item-info">
+                      <ul class="color-swatch">
+                        <li class="khaki"><i class="hidden">KHAKI</i></li>
+                        <li class="navy"><i class="hidden">NAVY</i></li>
+                      </ul>
+                      <p class="brand-name">SAMSONITE</p>
+                      <h4 class="item-name">JEFFERY</h4>
+                      <p class="item-detail">TOTE</p>
+                      <div class="price-wrap">
+                        <strong class="price">359,000</strong>
+                        <!-- <span class="sale">582,000</span> -->
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-scrollbar"></div>
+            </div>
           </div>
         </div>
       </div>
