브랜드 스토리 작업중

--- a/index.html
+++ b/index.html
@@ -1596,19 +1596,19 @@
                   <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                  <figure><img src="./img/theme-main2.jpg" alt="A POETIC JOURNEY"></figure>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                  <figure><img src="./img/theme-main3.jpg" alt="A POETIC JOURNEY"></figure>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                  <figure><img src="./img/theme-main4.jpg" alt="A POETIC JOURNEY"></figure>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                  <figure><img src="./img/theme-main5.jpg" alt="A POETIC JOURNEY"></figure>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/theme-main1.png" alt="A POETIC JOURNEY"></figure>
+                  <figure><img src="./img/theme-main6.jpg" alt="A POETIC JOURNEY"></figure>
                 </div>
               </div>
               <div class="swiper-pagination"></div>
