브랜드 스토리 반응형 작업중

--- a/sub.brandstory.html
+++ b/sub.brandstory.html
@@ -356,7 +356,7 @@
           </div>
         </div>
         <!-- 1910 -->
-        <div class="history-con">
+        <div class="history-con con-1910">
           <div class="history-img-wrap img-1910">
             <figure>
               <img src="./img/brandstory/brandstory0.jpg" alt="">
