브랜드스토리 반응형 완

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
           </li>
           <li>
             <a href="#"><b>EXPLORE</b></a>
-            <div class="gnb-dropdown-wrap">
+            <div class="gnb-dropdown-wrap short">
               <ul class="gnb-dropdown gnb-menu-explore">
                 <li><a href="#">최신소식</a>
                   <!-- <strong>최신소식</strong>
