--- a/sub.brandstory.html
+++ b/sub.brandstory.html
@@ -259,7 +259,7 @@
           </li>
           <li>
             <a href="#"><b>EXPLORE</b></a>
-            <div class="gnb-dropdown-wrap">
+            <div class="gnb-dropdown-wrap short">
               <ul class="gnb-dropdown gnb-menu-explore">
                 <li><a href="#">최신소식</a>
                   <!-- <strong>최신소식</strong>
@@ -374,7 +374,7 @@
         </div>
 
         <!-- 1962 -->
-        <div class="history-con">
+        <div class="history-con con-1962">
           <div class="history-img-wrap img-1962">
             <figure>
               <img src="./img/brandstory/brandstory1.jpg" alt="">
@@ -401,13 +401,13 @@
               <h5>1986</h5>
               <a href="#" class="btn-arrow"><i class="hidden">arrow</i></a>
             </div>
-            <p>3가지 잠금장치를 갖춘 <br>
+            <p>3가지 잠금장치를 갖춘
               'Oyster (오이스터)' 캐리어를 출시했습니다.</p>
           </div>
         </div>
 
         <!-- 2000 -->
-        <div class="history-con">
+        <div class="history-con con-2000">
           <div class="history-img-wrap img-2000">
             <figure>
               <img src="./img/brandstory/brandstory3-1.webp" alt="">
@@ -455,7 +455,7 @@
         </div>
 
         <!-- 2017 -->
-        <div class="history-con">
+        <div class="history-con con-2017">
           <div class="history-img-wrap img-2017">
             <figure>
               <img src="./img/brandstory/brandstory6.jpg" alt="">
